--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -61,10 +61,10 @@
 
       .product-sale{
         position: absolute;
-        top: 0;
-        right:0;
-        border-radius: 6px;
-        padding: 5px 10px;
+        top:2%;
+        left:2%;
+        border-radius: 10px;
+        padding: 5px;
         background: red;
         color: white;
 
@@ -236,6 +236,18 @@
   
   }
   
+  
+
+  @media screen and (max-width: 1024px) {
+      
+
+  }
+
+   @media screen and (max-width: 768px) {
+      
+
+  }
+
   @media screen and (max-width: 550px) {
   
     .product {
@@ -248,9 +260,15 @@
       }
     }
   }
+
   
-  // @media screen and (max-width: 800px) {
-  //   .product {
-  //     flex: 0 0 calc(50% - calc(1rem * 0.55));
-  //   }
-  // }
+  @media screen and (max-width: 320px) {
+
+    .product{
+      .product-image-wrapper{
+        .image-wrapper{
+          min-height: 100px;
+        }
+      }
+    }
+  }
