--- a/src/scss/components/ProductDetail.scss
+++ b/src/scss/components/ProductDetail.scss
@@ -90,8 +90,8 @@
 
           .product-sale{
             position: absolute;
-            bottom:0;
-            left:0;
+            top:2%;
+            left:2%;
             border-radius: 10px;
             padding: 5px;
             background: red;
