--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@ html, body {
 
     .content-wrapper{
       min-height: 500px;
+      padding: 70px 0;
     }
 
 
@@ -407,3 +408,13 @@ html, body {
     justify-content: center;
     align-items: center;
   }
+
+
+
+  @media screen and (max-width: 320px){
+    .content-wrapper{
+        padding: 30px 0;
+        
+ 
+   }
+ }
