--- a/src/scss/components/Cart.scss
+++ b/src/scss/components/Cart.scss
@@ -50,9 +50,8 @@
             -webkit-box-direction: normal;
             -ms-flex-direction: column;
             flex-direction: column;
-            margin-right: 40px;
-            margin-bottom: 40px;
-            
+            margin: 0 20px;
+            max-width: 250px;       
 
             .product-top{
               text-align: center;
