--- a/src/scss/components/Checkout.scss
+++ b/src/scss/components/Checkout.scss
@@ -1,9 +1,18 @@
 .checkout__success {
     position: relative;
-    left: 45%;
+    display: flex;
     padding: 30px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     p{
       margin-bottom: 30px;
+      font-weight: 700;
+      text-transform: uppercase;
+      font-size: 20px;
     }
-  }
+  
+}
+
+    
