--- a/src/scss/components/ProductDetail.scss
+++ b/src/scss/components/ProductDetail.scss
@@ -166,11 +166,15 @@
 
 
   @media screen and (max-width: 1024px) {
-    
+    .product-container {
+      width: 70%;
+    }
   }
 
   @media screen and (max-width: 768px) {
-    
+    .product-container {
+      width: 70%;
+    }
   }
   
    @media screen and (max-width: 550px) {
