--- a/src/scss/components/FilterProducts.scss
+++ b/src/scss/components/FilterProducts.scss
@@ -112,6 +112,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
               outline: 0;
               padding: 5px;
               width: 100%;
+              cursor: pointer;
             }
           }
 
