--- a/src/scss/components/ProductList.scss
+++ b/src/scss/components/ProductList.scss
@@ -28,6 +28,68 @@
 
       }
 
+      &__select{
+        width: 135px;
+        margin: 0 auto;
+        position: relative;
+        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.135216);
+        
+      }
+
+      &__select.is-active .select__body{
+        display: block;
+      }
+
+
+      .select__header{
+        display: flex;
+        border: 1px solid #ccc;
+        cursor: pointer;
+        border-radius: 3px;
+      }
+
+      .select__current{
+        font-size: 18px;
+        line-height: 24px;
+        padding: 8px;
+      }
+
+      .select__icon{
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        height: 40px;
+        text-align: center;
+        width: 40px;
+        margin-left: auto;
+        flex-shrink: 0;
+      }
+
+      .select__body{
+        border: 1px solid #cccccc;
+        border-top: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        display: none;
+        top: 100%;
+        transition: all 2s linear;
+        border-radius: 3px;
+      }
+
+      .select__item{
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 24px;
+        padding: 8px;
+
+        &:hover{
+          background-color: #f2f2f2;
+        }
+      }
+
+
+
       p{
         margin: 0;
       }
