--- a/src/scss/components/TopNavigation.scss
+++ b/src/scss/components/TopNavigation.scss
@@ -3,6 +3,7 @@
       0 3px 1px -2px rgba(0, 0, 0, 0.2);
     display: flex;
     padding: 1em;
+    border-radius: 8px;
   
   
     .header-inner {
@@ -24,12 +25,6 @@
       &#product-list{
         margin-right: 50px;
       }
-    }
-
-
-    .top-logo{
-      width: auto;
-      max-height: 50px;
     }
   
     .router-link-exact-active {
