--- a/src/scss/components/LoginForm.scss
+++ b/src/scss/components/LoginForm.scss
@@ -1,9 +1,9 @@
 .login-form__wrapper{
 
-   
     padding: 35px;
     justify-content: center;
     display: flex;
+    margin: 0 auto;
   
 
     .form__inner{
