--- a/src/scss/components/ProductList.scss
+++ b/src/scss/components/ProductList.scss
@@ -7,6 +7,10 @@
 
     .products-list-controls{
       display: flow-root;
+      background: #fff;
+      padding: 21px 18px 21px 23px;
+    
+      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
     }
 
     .display-quantity{
@@ -15,6 +19,10 @@
       float: right;
       display: flex;
       align-items: center;
+
+      &__title{
+        margin-right: 20px;
+      }
       
       &__btn{
         display: inline-flex;
@@ -25,9 +33,9 @@
         font-size: 13px;
         border-radius: 4px;
         border: 1px solid #e2e2e2;
-
       }
 
+      /* CUSTOM SELECT */
       &__select{
         width: 135px;
         margin: 0 auto;
@@ -49,7 +57,7 @@
       }
 
       .select__current{
-        font-size: 18px;
+        font-size: 1.1em;
         line-height: 24px;
         padding: 8px;
       }
@@ -75,6 +83,7 @@
         top: 100%;
         transition: all 2s linear;
         border-radius: 3px;
+        background: #fff;
       }
 
       .select__item{
@@ -88,6 +97,8 @@
         }
       }
 
+       /* END CUSTOM SELECT */
+
 
 
       p{
@@ -96,6 +107,7 @@
       
     }
   
+    /* PRODUCTS AREA */
     .products {
       display: flex;
       flex-wrap: wrap;
@@ -113,6 +125,7 @@
     .loading {
       text-align: center;
     }
+    /* END PRODUCTS AREA */
   }
   
   @media screen and (max-width: 800px) {
