--- a/src/scss/components/RegistrationForm.scss
+++ b/src/scss/components/RegistrationForm.scss
@@ -1,10 +1,11 @@
-.login-form__wrapper{
+.registration-form__wrapper{
 
     padding: 35px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin: 0 auto;
 
     .form__inner{
         padding: 35px;
