Corrected Error with deploy

--- a/src/scss/components/LoginForm.scss
+++ b/src/scss/components/LoginForm.scss
@@ -25,7 +25,11 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-            }
+			}
+			
+			.form__control{
+				height: inherit;
+			}
         }
 
       
