--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -266,7 +266,7 @@
 
    @media screen and (max-width: 768px) {
     .product {
-      width: 26vw !important;
+      width: 24vw;
       .product-inner{
         .product-header{
           &.product-header--top{
