Refactored, Few Css bugs fixed

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -158,7 +158,7 @@
           vertical-align: top;
   
           &:before{
-            background: url(../assets/minus-solid.svg);
+            background: url(../../assets/minus-solid.svg);
             vertical-align: middle;
           }
         }
@@ -169,7 +169,7 @@
           cursor: pointer;
   
           &:before{
-            background: url(../assets/plus-solid.svg);
+            background: url(../../assets/plus-solid.svg);
             vertical-align: middle;
           }
         }
