--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -3,7 +3,18 @@
 
     .empty-cart {
       position: relative;
-      left: 45%;
+	  left: 45%;
+	  
+	.shop-cart{
+		padding: 10px 30px;
+		font-size: 13px;
+		outline: none;
+		border: 1px solid #fff;
+		border-radius: 8px;
+		transition: all .2s ease-in;
+		opacity: 1;
+		cursor: pointer;
+	}
   
       p{
         margin-bottom: 30px;
@@ -33,7 +44,7 @@
           
       
           .card{
-            width: 33.3%;
+            width: 50%;
             border: none;
             flex: none;  
 
@@ -74,7 +85,6 @@
         
           .cart-counter{
             margin: 0 auto;
-            width: 50%;
           }
     
           .card-row{
