--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,11 +7,12 @@ $bg-color: #F9F9F9;
 
 html, body {
     box-sizing: border-box;
-    height: 100vh;
+	height: 100vh;
+	line-height: 1.6rem;  
 
     .content-wrapper{
       min-height: 500px;
-      padding: 70px 0;
+      padding: 30px 0;
       display: flex;
     }
 
@@ -143,9 +144,7 @@ html, body {
   
   #main-wrapper {
     color: #333;
-    font-size: 1.1rem;
-    line-height: 1.6rem;  
-    min-height: 100%;
+    // min-height: 100%;
     display: flex;
     flex-direction: row;
     background-color: $bg-color;
@@ -202,11 +201,11 @@ html, body {
   }
 
   .element-light-green{
-    background-color: #346d1f;
+    background-color: #346d1f!important;
     color: #fff;
 
     &:hover{
-      background: #92d878;
+      background: #588048!important;
     }
   }
 
@@ -348,28 +347,6 @@ html, body {
         color: #fff;
       }
     }
-
-    &.shop-cart{
-      background: #6de97d;
-      color: #fff;
-      padding: 10px 30px;
-      font-size: 13px;
-      outline: none;
-      border: 1px solid #6de97d;
-      border-radius: 1000px;
-      transition: all .2s ease-in;
-      opacity: 1;
-      cursor: pointer;
-
-      &:hover{
-        background: #32e048;
-        color: #fff;
-      }
-    }
-
-
-
-
   }
 
   /*Input counter block styles*/
