--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -107,7 +107,6 @@ $border-form-btn: #ABABAB;
             width: 100%;
 
             .review__author{
-                width: 50%;
                 display: inline-block;
                 padding-right: 5px;
                 max-height: 40px;
@@ -121,13 +120,20 @@ $border-form-btn: #ABABAB;
                 &p{
                     text-align: left;
                 }
-            }
+			}
+			
+			.review__date{
+				display: flex;
+				align-items: center;
+				
+				p{
+					text-transform: uppercase;
+					font-size: 0.8em;
+					color: #999;
+				}
+			}
 
-                .review__date{
-                    width: 50%;
-                }
-
-
+              
             }
         
         
