--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -1,6 +1,6 @@
 .product-container {
 
-    width: 50%;
+    width: 75%;
     min-height: 300px;
     margin: 1rem auto;
     text-align: center;
@@ -17,7 +17,6 @@
   
   
       .left-col{
-
 		width: 40%;
   
         .header-product{
@@ -31,10 +30,8 @@
         }
   
         span {
-          color: #737373;
           float: right;
           font-size: 1rem;
-          font-weight: normal;
         }
   
   
@@ -64,17 +61,19 @@
           .stock{
             background: #ededed;
             display: inline-block;
-            font-size: 14px;
+			font-size: 14px;
+			font-weight: 600;
             padding: 4px 8px;
             border-radius: 4px;
             max-width: 125px;
             text-overflow: ellipsis;
             white-space: nowrap;
-            margin-right: 4px;
+			margin-right: 4px;
+			
   
             &.available{
               background: #31df21;
-              color: #ededed;
+			  color: #ededed;
             }
   
             &.not-available{
@@ -101,17 +100,20 @@
           }
 
           .product-sale{
-            position: absolute;
-            top:2%;
-            left:2%;
-            border-radius: 10px;
-            padding: 5px;
-            background: red;
-            color: white;
-    
+			position: absolute;
+			top:2%;
+			left:2%;
+			border-radius: 4px;
+			padding: 4px 8px;
+			background: red;
+			color: #ffffff;
+			font-weight: 600;
           }
         }
-        
+		
+		.description__text{
+			text-align: left;
+		}
   
   
         .buy-block{
@@ -124,7 +126,7 @@
           border-radius: 2px;
           margin: 1rem 0;
         
-      }
+      	}
   
       }
   
@@ -148,7 +150,12 @@
 			position: relative;
 			font-weight: 600;
 			text-decoration: underline;
-        }
+			text-align: left;
+		}
+		
+		.property-value{
+			text-align: left;
+		}
 	  }
 	  
 
@@ -205,10 +212,6 @@
 
           .right-col{
             margin-left: 0px;
-          }
-
-          .left-col{
-
           }
         }
       }
