--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,16 @@ $bg-color: #F9F9F9;
 html, body {
     box-sizing: border-box;
 	height: 100vh;
-	line-height: 1.6rem;  
+	line-height: 1.6rem;
+	font-size: 15px;
+
+	h1,h2,h3,h4,h5{
+		font-weight: 600;
+	}
+
+	.bold{
+		font-weight: 600;
+	}
 
     .content-wrapper{
       min-height: 500px;
