--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -115,7 +115,7 @@
       align-items: center;
       justify-content: space-between;
       margin-top: 15px;
-      flex-direction: column;
+      flex-direction: row;
   
       .counter_block{
         box-sizing: border-box;
