--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -321,7 +321,7 @@ html, body {
     &.btn-primary{
       background: #005bff;
       color: #fff;
-      padding: 10px 30px;
+      padding: 10px;
       font-size: 13px;
       outline: none;
       border: 1px solid #005bff;
