--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -37,7 +37,6 @@
 
       /* CUSTOM SELECT */
       &__select{
-        width: 135px;
         margin: 0 auto;
         position: relative;
         box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.135216);
@@ -109,7 +108,7 @@
     .products {
       display: flex;
       padding: 16px 30px;
-      justify-content: center;
+      justify-content: flex-start;
     }
   
     .no-products {
