--- a/src/components/Checkout/Checkout.scss
+++ b/src/components/Checkout/Checkout.scss
@@ -1,10 +1,11 @@
 .checkout__success {
     position: relative;
-    display: flex;
-    padding: 30px;
+		display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+		padding: 30px;
+		margin: 0 auto;
 
     p{
       margin-bottom: 30px;
