--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,6 +1,8 @@
 .product {
     margin: 10px;
-    width: 21vw;
+	flex: 30%;
+	width: 30%;
+	max-width: 30%;
     border-radius: 10px;
     cursor: pointer;
   
@@ -9,70 +11,168 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      padding: 20px;
+      padding: 20px 20px 0;
       border-radius: 10px;
       border: 1px solid #e1e1e1;
       transition: box-shadow 0.2s ease-in-out;
   
       &:hover {
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-      }
-    }
-  
-    .product-header--top {
-      text-align: center;
-      margin-bottom: 5%;
-  
-      .product-title {
-        font-weight: 600;
-        padding-top: 2px;
-        font-size: 18px;
-        min-height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-  
-      .product-sticker {
-        color: black;
-        float: right;
-        font-size: 0.9rem;
-        border-radius: 5px;
-        padding: 3px 10px 2px;
-        text-transform: uppercase;
-        border-radius: 2px;
-      }
-    }
-
-    .product-image-wrapper{
-      position: relative;
-  
-      .image-wrapper {
-
-        text-align: center;
-        overflow: hidden;
-        min-height: 300px;
-
-        .product-image{
-          width: auto;
-          max-height: 200px;
-          
-
-        }
-  
-      }
-
-	  .product-sale{
-		position: absolute;
-		top:2%;
-		left:2%;
-		border-radius: 4px;
-		padding: 4px 8px;
-		background: red;
-		color: #ffffff;
-		font-weight: 600;
 	  }
+	  
+	  .product-header{
+		  height: 50%;
+
+			.product-header--top {
+				text-align: center;
+				margin-bottom: 5%;
+			
+				.product-title {
+					font-weight: 600;
+					padding-top: 2px;
+					font-size: 1.2rem;
+					min-height: 50px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+			
+				.product-sticker {
+					color: black;
+					float: right;
+					font-size: 0.9rem;
+					border-radius: 5px;
+					padding: 3px 10px 2px;
+					text-transform: uppercase;
+					border-radius: 2px;
+				}
+			}
+
+			.product-image-wrapper{
+				position: relative;
+			
+				.image-wrapper {
+			
+					text-align: center;
+					overflow: hidden;
+			
+					.product-image{
+					width: auto;
+					max-height: 200px;
+					}
+			
+				}
+			
+				.product-sale{
+					position: absolute;
+					top:2%;
+					left:2%;
+					border-radius: 4px;
+					padding: 4px 8px;
+					background: red;
+					color: #ffffff;
+					font-weight: 600;
+				}
+			}
+
+
+	  }
+
+	  .product-properties{
+		height: 20%;
+  
+		.price-block{
+		  margin: 0 auto;
+		  padding: 15px;
+		  text-align: center;
+		}
+	
+	  }
+
+	  .product-footer {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-top: 15px;
+		flex-direction: row;
+	
+		.counter_block{
+		  box-sizing: border-box;
+		  border: 1px solid #f3f3f5;
+		  background: #f3f3f5;
+		  display: inline-block;
+		  text-align: center;
+		  border-radius: 2px;
+		  padding: 5px;
+		  
+		  >span:before{
+			display: inline-block;
+			content: "";
+			width: 14px;
+			height: 17px;
+			background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px no-repeat;
+			vertical-align: middle;
+		  }
+	
+		  input[type="text"]{
+			width: 34px;
+			border: 0;
+			border-left: 1px solid #f3f3f5;
+			border-right: 1px solid #f3f3f5;
+			background: #f3f3f5;
+			color: #666;
+			font-size: 13px;
+			height: 34px;
+			border-radius: 0;
+			text-align: center;
+			vertical-align: top;
+			line-height: 13px;
+			padding: 20px 3px;
+			font-weight: 700;
+		  }
+	
+		  .minus{
+			line-height: 40px;
+			display: inline-block;
+			cursor: pointer;
+			vertical-align: top;
+	
+			&:before{
+			  background: url(../../assets/minus-solid.svg);
+			  vertical-align: middle;
+			}
+		  }
+	
+		  .plus{
+			line-height: 40px;
+			display: inline-block;
+			cursor: pointer;
+	
+			&:before{
+			  background: url(../../assets/plus-solid.svg);
+			  vertical-align: middle;
+			}
+		  }
+		  
+		}
+	
+		.product-icons {
+		  margin-right: -10px;
+	
+		  .product-icons--link {
+			display: inline-block;
+			padding: 0 10px;
+			cursor: pointer;
+		  }
+		}    
+	  }
+
+
     }
+  
+   
+
+    
   
     @media screen and (max-width: 550px) {
       .image-wrapper .product-image{
@@ -97,95 +197,16 @@
           &:hover{
             opacity: 1;
           }
-        }
+				}
+				
+				 
+
+
       }
   
-    .product-properties{
+    
   
-      .price-block{
-        margin: 0 auto;
-        padding: 15px;
-        text-align: center;
-      }
-  
-    }
-  
-    .product-footer {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-top: 15px;
-      flex-direction: row;
-  
-      .counter_block{
-        box-sizing: border-box;
-        border: 1px solid #f3f3f5;
-        background: #f3f3f5;
-        display: inline-block;
-        border-radius: 2px;
-        padding: 5px;
-        
-        >span:before{
-          display: inline-block;
-          content: "";
-          width: 14px;
-          height: 17px;
-          background: url(/bitrix/templates/aspro_next/images/svg/ai.svg) -80px -191px no-repeat;
-          vertical-align: middle;
-        }
-  
-        input[type="text"]{
-          width: 34px;
-          border: 0;
-          border-left: 1px solid #f3f3f5;
-          border-right: 1px solid #f3f3f5;
-          background: #f3f3f5;
-          color: #666;
-          font-size: 13px;
-          height: 34px;
-          border-radius: 0;
-          text-align: center;
-          vertical-align: top;
-          line-height: 13px;
-          padding: 20px 3px;
-          font-weight: 700;
-        }
-  
-        .minus{
-          line-height: 40px;
-          display: inline-block;
-          cursor: pointer;
-          vertical-align: top;
-  
-          &:before{
-            background: url(../../assets/minus-solid.svg);
-            vertical-align: middle;
-          }
-        }
-  
-        .plus{
-          line-height: 40px;
-          display: inline-block;
-          cursor: pointer;
-  
-          &:before{
-            background: url(../../assets/plus-solid.svg);
-            vertical-align: middle;
-          }
-        }
-        
-      }
-  
-      .product-icons {
-        margin-right: -10px;
-  
-        .product-icons--link {
-          display: inline-block;
-          padding: 0 10px;
-          cursor: pointer;
-        }
-      }    
-    }
+    
   
     .image,
     .spacer {
@@ -246,6 +267,9 @@
 
   @media screen and (max-width: 1024px) {
     .product {
+		flex: 45%;
+		width: 45%;
+		max-width: 45%;
       
       .product-inner{
         .product-header{
@@ -253,7 +277,7 @@
           .product-image-wrapper{
             .image-wrapper{
               .product-image{
-                width: 100% !important;
+                // width: 100% !important;
               }
               
             }
