--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -5,7 +5,7 @@
     margin: 1rem auto;
     text-align: center;
   
-    .product {
+    .product-detail {
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
         0 3px 1px -2px rgba(0, 0, 0, 0.2);
       margin: 0;
@@ -13,11 +13,12 @@
       padding: 2rem;
       width: 100%;
       min-height: 300px;
-      display: flex;
+			display: flex;
+			flex-direction: column;
   
   
-      .left-col{
-		width: 40%;
+      &__top{
+				width: 100%;
   
         .header-product{
           display: flex;
@@ -25,8 +26,7 @@
         }
   
         h3,h4 {
-		  margin-bottom: 1rem;
-		  font-weight: 600;
+					margin-bottom: 1rem;
         }
   
         span {
@@ -37,43 +37,43 @@
   
       }
   
-      .right-col{
+			&__bottom{
   
-        margin-left: 50px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
-		position: relative;
-		width: 60%;
+				position: relative;
+				width: 100%;
 
         .product-rating{
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: space-between;
-		  align-items: center;
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					align-items: center;
           font-weight: 700;
         }
 
         .stock-block{
           display: flex;
-          justify-content: center;
-          margin-top: 3%;
+					justify-content: center;
+					padding: 1% 0;
   
           .stock{
             background: #ededed;
             display: inline-block;
-			font-size: 14px;
-			font-weight: 600;
+						font-size: 1rem;
+						font-weight: 600;
             padding: 4px 8px;
             border-radius: 4px;
             max-width: 125px;
             text-overflow: ellipsis;
             white-space: nowrap;
-			margin-right: 4px;
+						margin-right: 4px;
 			
   
             &.available{
               background: #31df21;
-			  color: #ededed;
+			  			color: #ededed;
             }
   
             &.not-available{
@@ -100,14 +100,14 @@
           }
 
           .product-sale{
-			position: absolute;
-			top:2%;
-			left:2%;
-			border-radius: 4px;
-			padding: 4px 8px;
-			background: red;
-			color: #ffffff;
-			font-weight: 600;
+						position: absolute;
+						top:2%;
+						left:2%;
+						border-radius: 4px;
+						padding: 4px 8px;
+						background: red;
+						color: #ffffff;
+						font-weight: 600;
           }
         }
 		
@@ -117,18 +117,89 @@
   
   
         .buy-block{
-			display: flex;
-			justify-content: space-around;
-			color: black;
-			float: right;
-			font-size: 0.9rem;
-			border-radius: 5px;
-			padding: 3px 10px 2px;
-			text-transform: uppercase;
-			border-radius: 2px;
-			margin: 1rem 0;
-			
-        
+					display: flex;
+					justify-content: space-around;
+					color: #000;
+					font-size: 0.9rem;
+					border-radius: 5px;
+					padding: 3px 10px 2px;
+					text-transform: uppercase;
+					border-radius: 2px;
+					margin: 1rem 0;
+
+
+					/*Input counter block styles*/
+					.counter-block{
+						box-sizing: border-box;
+						border: 1px solid #f3f3f5;
+						background: #f3f3f5;
+						display: inline-block;
+						border-radius: 2px;
+						padding: 5px;
+						width: 50%;
+						flex: 50%;
+						margin-left: 10%;
+
+						
+						>span:before{
+							display: inline-block;
+							content: "";
+							width: 14px;
+							height: 17px;
+							vertical-align: middle;
+						}
+
+						input[type="text"]{
+							width: 34px;
+							border: 0;
+							border-left: 1px solid #f3f3f5;
+							border-right: 1px solid #f3f3f5;
+							background: #f3f3f5;
+							color: #666;
+							font-size: 1.6em;
+							line-height: 1.6em;
+							height: 34px;
+							border-radius: 0;
+							text-align: center;
+							vertical-align: top;
+							
+							padding: 20px 3px;
+							font-weight: 700;
+						}
+
+						.minus{
+							line-height: 40px;
+							display: inline-block;
+							cursor: pointer;
+							vertical-align: top;
+
+							&:before{
+								background: url(../../assets/minus-solid.svg);
+								vertical-align: middle;
+							}
+						}
+
+						.plus{
+							line-height: 40px;
+							display: inline-block;
+							cursor: pointer;
+
+							&:before{
+								background: url(../../assets/plus-solid.svg);
+								vertical-align: middle;
+							}
+						}  
+					}
+
+					.cart-block{
+						width: 50%;
+						flex: 50%;
+						margin-left: 10%;
+
+						button{
+							height: 100%;
+						}
+					}
       	}
   
       }
@@ -145,29 +216,29 @@
       }
   
       .product-section {
-        padding: 0.3em 0;
-        word-break: break-word;
+				padding: 0.3em 0;
+				word-break: break-word;
 
-        .property-title{
-			padding: 1rem 0;
-			position: relative;
-			font-weight: 600;
-			text-decoration: underline;
-			text-align: left;
-		}
-		
-		.property-value{
-			text-align: left;
-		}
+				.property-title{
+					padding: 1rem 0;
+					position: relative;
+					font-weight: 600;
+					text-decoration: underline;
+					text-align: center;
+				}
+			
+				.property-value{
+					text-align: center;
+				}
 	  }
 	  
 
-	  .price-section{
-		padding: 2rem 0;
+		.price-block{
+			padding: 2rem 0;
 
-		.quantity-block{
-			padding: 1rem 0;
-		}
+			.quantity-block{
+				padding: 1rem 0;
+			}
 	  }
   
       
@@ -199,40 +270,20 @@
       width: 90%;
     }
   }
-  
-   @media screen and (max-width: 550px) {
-      .product-container {
-        width: 90%;
-      }
-    }
 
-    @media screen and (max-width: 425px) {
+	@media screen and (max-width: 425px) {
 
-      .product-container {
+		.product-container {
 
-        .product {
-          flex-direction: column;
+			.product-detail {
+				flex-direction: column;
 
-          .right-col{
-            margin-left: 0px;
-          }
-        }
-      }
-    }
-
-    @media screen and (max-width: 320px) {
-
-      .product-container {
-
-        .product {
-          flex-direction: column;
-
-          .right-col{
-            margin-left: 0px;
-          }
-        }
-      }
-    }
+				.right-col{
+					margin-left: 0px;
+				}
+			}
+		}
+	}
 
 
     
