--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -6,11 +6,11 @@
     }
 
     .products-list-controls{
-      display: flow-root;
+	  display: flex;
+	  justify-content: flex-end;
       background: #fff;
-      padding: 21px 18px 21px 23px;
-    
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
+      padding: 21px 18px;
+	  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
     }
 
     .display-quantity{
@@ -108,7 +108,8 @@
     .products {
       display: flex;
       padding: 16px 30px;
-      justify-content: flex-start;
+	  justify-content: flex-start;
+	  flex-wrap: wrap;
     }
   
     .no-products {
@@ -140,10 +141,8 @@
 
       .products-list-controls{
         display: flex;
-        flex-direction: column;
 
         .display-quantity{
-          margin: 20px 0;
           display: inline-flex;
           justify-content: center;
         }
