--- a/src/components/VerticalMenu/VerticalMenu.scss
+++ b/src/components/VerticalMenu/VerticalMenu.scss
@@ -19,14 +19,16 @@
     }
 
     .sub-menu{
-        margin-top: 16px;
+        
+		width: 100%;
         box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.170509);
         border-radius: 4px;
-        text-align: center;
-        padding: 12px 50px;
+		text-align: center;
+		margin-top: 16px;
+        padding: 12px;
         cursor: pointer;
-        text-transform: uppercase;
-
+		text-transform: uppercase;
+		
         a{
             color: #fff;
         }
@@ -43,27 +45,31 @@
                     color: #999999;
                     font-style: normal;
                     font-weight: 800;
-                    font-size: 14px;
+                    font-size: 1rem;
                     line-height: 36px;
                     text-transform: uppercase;
                 }
             }
 
             &__subtitle{
-                padding-left: 10px;
+                padding: 0 10px;
                 a{
                     color: #2C2C2C;
-                    font-size: 15px;
-                    line-height: 40px;
+                    font-size: 0.9rem;
+					line-height: 40px;
+					text-transform: uppercase;
+					font-weight: 600;
+
+					&:hover{
+						opacity: 0.9;
+					}
                     
                 }
             }
 
             
 
-            &:hover{
-                opacity: 0.9;
-            }
+           
         }
         
         
