--- a/src/components/FilterProducts/FilterProducts.scss
+++ b/src/components/FilterProducts/FilterProducts.scss
@@ -257,9 +257,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
       }
     }
 
-    @media screen and (max-width: 1024px) {
-
-    }
+   
   
   
   @media screen and (max-width: 768px) {
@@ -267,7 +265,14 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
       select {
         width: 40%;
       }
-    }
+	}
+	
+	.filterWrapper{
+		.filterIcon{
+		  right: 2%;
+		  top: 30%;
+		}
+	  }
   
     .card:nth-child(3n) {
       margin-right: 1em;
@@ -280,18 +285,9 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
   
   @media screen and (max-width: 425px) {
 
-    .filterWrapper{
-      .filterIcon{
-        right: 10px;
-      }
-    }
     #filter {
       select {
         width: 60%;
       }
     }
-  }
-
-  @media screen and (max-width: 320px) {
-
   }
