--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -172,7 +172,8 @@ html, body {
 	  width: 80%;
 		
       @media (max-width: 768px) {
-        width: 100%;
+				width: 100%;
+				margin: 0;
       }
     }
   }
